[tool.poetry]
name = "coflux"
version = "0.2.2"
description = ""
authors = ["Joe Freeman <joe@joef.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
watchfiles = "^0.21.0"
websockets = "^12.0"
httpx = "^0.26.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[tool.poetry.scripts]
coflux = "coflux.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
