[tool.poetry]
name = "coflux"
version = "0.4.0"
description = ""
authors = ["Joe Freeman <joe@joef.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
watchfiles = "^0.21.0"
websockets = "^12.0"
httpx = "^0.26.0"
pyyaml = "^6.0.1"
pandas = {version = "^2.2.3", optional = true}
pyarrow = {version = "^17.0.0", optional = true}

[tool.poetry.extras]
pandas = ["pandas", "pyarrow"]

[tool.poetry.scripts]
coflux = "coflux.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
