[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "example"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
coflux = {path = "../../clients/python", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
