[tool.poetry]
name = "slackbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
coflux = "^0.2.4"
slack-sdk = "^3.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
